--- a/src/app/view/styles/variables.scss
+++ b/src/app/view/styles/variables.scss
@@ -5,8 +5,8 @@ $color-secondary: #ffff;
 
 $font-color-contrast: #ffff;
 $font-color-normal: #000000;
-$font-color-detail1: gray;
-$font-color-detail2: yellow;
+$font-color-detail1: #5c5c5c;
+$font-color-detail2: #f4d669;
 
 $font-family-title: 'Arial Black';
 $font-family-normal: 'Arial';
