--- a/public/css/components/navbar.css
+++ b/public/css/components/navbar.css
@@ -1,6 +1,6 @@
 .navbar {
   border-radius: 0;
-  padding: 15px;
+  padding: 15px 30px 15px 30px;
   background-color: #5a2f80;
   color: white;
   font-size: 1rem;
@@ -12,13 +12,27 @@
   display: grid;
   grid-template-columns: 2fr 1fr 1fr 1fr;
   align-items: end;
+  justify-items: end;
+  margin-bottom: 10px;
 }
 .navbar__options--title {
   font-size: 1.5rem;
   font-family: "Arial Black";
   font-weight: normal;
+  justify-self: start;
 }
-.navbar__options .material-icons {
+.navbar__options .options-icon {
   font-size: 1rem;
-  margin-right: 1px;
+  margin-right: 3px;
+}
+.navbar__options a {
+  color: white;
+}
+.navbar__search {
+  display: grid;
+  align-items: end;
+  grid-template-columns: 2fr 2fr;
+}
+.navbar__search--input {
+  grid-column: 2;
 }
