--- a/src/app/view/home.html
+++ b/src/app/view/home.html
@@ -5,13 +5,9 @@
     <meta charset="UTF-8">
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-
-    <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <!-- Optional theme -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css"
         integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
@@ -19,7 +15,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
 
     <link rel="stylesheet" href="css/app.css" />
 
@@ -31,14 +28,24 @@
         <div class="navbar">
             <div class="navbar__options">
                 <span class="navbar__options--title">MagaNets</span>
-                <span class="navbar__options--city"><span class="material-icons">location_on</span>Cidade: São Paulo</span>
-                <span class="navbar__options--central"><span class="material-icons">call</span>Central de atendimento</span>
-                <span class="navbar__options--wishlist"><span class="material-icons">favorite</span>Lista de desejos</span>
+                <span class="navbar__options--city"><span class="glyphicon glyphicon-map-marker options-icon"></span>Cidade: São Paulo</span>
+                <span class="navbar__options--central"><span class="glyphicon glyphicon-earphone options-icon"></span>Central de atendimento</span>
+                <span class="navbar__options--wishlist"><a href="/wishlist"><span class="fas fa-heart options-icon"></span>Lista de desejos</span></a>
 
             </div>
             <div class="navbar__search">
-
+                <div class="input-group navbar__search--input">
+                    <span class="input-group-addon">
+                        <i class="fas fa-search"></i>
+                    </span>
+                    <input type="text" class="form-control" id="search" placeholder="Pesquisar">
+                    
+                </div>
             </div>
+            
+            
+        </div>
+        <div class="container-fluid">
 
         </div>
 
