--- a/src/app/views/index.ejs
+++ b/src/app/views/index.ejs
@@ -6,8 +6,10 @@
     <body>
         <div class="">
             <%- include('navbar') %>
+            <div class="container-fluid">
+                <%- include('gridProducts') %>
+            </div>
+            
         </div>
     </body>
-
-    
 </html>
