--- a/src/app/views/navbar.ejs
+++ b/src/app/views/navbar.ejs
@@ -7,11 +7,11 @@
 
     </div>
     <div class="navbar__search">
-        <div class="navbar__search--input input-group">
-            <span class="input-group-addon">
+        <div class="navbar__search--group input-group">
+            <span class="navbar__search--addon input-group-addon">
                 <i class="fas fa-search"></i>
             </span>
-            <input type="text" class="form-control" id="search" placeholder="Pesquisar">
+            <input type="text" class="navbar__search--input form-control border-0 shadow-none" id="search" placeholder="Buscar">
             
         </div>
     </div>
