--- a/src/app/views/styles/components/navbar.scss
+++ b/src/app/views/styles/components/navbar.scss
@@ -23,7 +23,7 @@
         }
 
         .options-icon {
-            font-size: 1rem;
+            font-size: $font-size;
             margin-right: 3px;
         }
 
@@ -37,9 +37,26 @@
         align-items: end;
         grid-template-columns: 2fr 2fr;
 
-        &--input {
-            grid-column: 2;
+        &--group {
+            grid-column: 2; 
         }
+
+        &--addon {
+            background-color: $color-secondary;
+        }
+
+        &--input {
+            border-left: 0;
+            padding: 3px 8px 3px 3px;
+            font-size: $font-size;
+            box-shadow: none;
+        }
+
+        &--input:hover {
+            box-shadow: none;
+
+        }
+        
     }
 
 }
