--- a/src/app/views/styles/variables.scss
+++ b/src/app/views/styles/variables.scss
@@ -2,11 +2,13 @@
 $color-primary: #5a2f80;
 $color-primary-strong: #37104f;
 $color-secondary: #ffff;
+$color-border-card: #e9e9e9;
 
 $font-color-contrast: #ffff;
 $font-color-normal: #000000;
 $font-color-detail1: #5c5c5c;
 $font-color-detail2: #f4d669;
+
 
 $font-family-title: 'Arial Black';
 $font-family-normal: 'Arial';
